--- a/Testing/index.html
+++ b/Testing/index.html
@@ -8,7 +8,7 @@
         .video-styles{
             height:86vh;   
             margin-bottom:5rem;
-            margin-top:2rem;
+            margin-top:2rem
         }
     </style>
     <title>Intersection Observer</title>
